--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,25 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-aop-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-aspects-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-beans-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-context-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-context-indexer-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-context-support-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-core-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-expression-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-instrument-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-jdbc-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-jms-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-messaging-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-orm-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-oxm-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-test-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-tx-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-web-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-webmvc-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-websocket-5.1.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/lib/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
