--- a/.classpath
+++ b/.classpath
@@ -21,6 +21,6 @@
 	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-web-5.1.7.RELEASE.jar"/>
 	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-webmvc-5.1.7.RELEASE.jar"/>
 	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-websocket-5.1.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/lib/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/App/spring-boot/lib/spring-boot-cli-2.1.4.RELEASE.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
