--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,14 @@
 	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-webmvc-5.1.7.RELEASE.jar"/>
 	<classpathentry kind="lib" path="C:/App/Spring/libs/spring-websocket-5.1.7.RELEASE.jar"/>
 	<classpathentry kind="lib" path="C:/App/spring-boot/lib/spring-boot-cli-2.1.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/WOLFK036/.m2/repository/com/microsoft/azure/azure-storage/5.0.0/azure-storage-5.0.0.jar" sourcepath="C:/Users/WOLFK036/.m2/repository/com/microsoft/azure/azure-storage/5.0.0/azure-storage-5.0.0-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="com.microsoft.azure"/>
+			<attribute name="maven.artifactId" value="azure-storage"/>
+			<attribute name="maven.version" value="5.0.0"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
