--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+		<groupId>com.microsoft.azure</groupId>
+		<artifactId>azure-storage</artifactId>
+		<version>5.0.0</version>
+	</dependency>
   </dependencies>
 
   <build>
